--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~9.0.7",
     "@angular/platform-browser-dynamic": "~9.0.7",
     "@angular/router": "~9.0.7",
+    "@ngrx/store": "^9.0.0",
     "husky": "^4.2.3",
     "pretty-quick": "^2.0.1",
     "rxjs": "~6.5.4",
